[project]
name = "multi-doc-deepak-mittal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "pdfminer-six>=20251107",
    "pi-heif>=1.1.1",
    "unstructured[all,all-docs]>=0.18.18",
]
